--- a/cardmode.ui
+++ b/cardmode.ui
@@ -158,7 +158,7 @@ QPushButton:pressed {
         </property>
         <layout class="QGridLayout" name="gridLayout_3">
          <item row="0" column="0">
-          <layout class="QVBoxLayout" name="verticalLayout" stretch="1">
+          <layout class="QVBoxLayout" name="verticalLayout" stretch="0">
            <item>
             <widget class="QScrollArea" name="scrollArea">
              <property name="widgetResizable">
@@ -168,59 +168,13 @@ QPushButton:pressed {
               <property name="geometry">
                <rect>
                 <x>0</x>
-                <y>-120</y>
+                <y>0</y>
                 <width>640</width>
-                <height>578</height>
+                <height>606</height>
                </rect>
               </property>
-              <layout class="QGridLayout" name="gridLayout_4" rowstretch="0,0,0,0,0,0">
-               <item row="2" column="0">
-                <layout class="QGridLayout" name="gridLayout_5" columnstretch="2,0">
-                 <item row="1" column="0">
-                  <widget class="QComboBox" name="comboBox_11">
-                   <item>
-                    <property name="text">
-                     <string>NVIDIA GeForce MX450</string>
-                    </property>
-                   </item>
-                  </widget>
-                 </item>
-                 <item row="1" column="1">
-                  <spacer name="horizontalSpacer_3">
-                   <property name="orientation">
-                    <enum>Qt::Orientation::Horizontal</enum>
-                   </property>
-                   <property name="sizeHint" stdset="0">
-                    <size>
-                     <width>40</width>
-                     <height>20</height>
-                    </size>
-                   </property>
-                  </spacer>
-                 </item>
-                 <item row="0" column="1">
-                  <spacer name="horizontalSpacer_5">
-                   <property name="orientation">
-                    <enum>Qt::Orientation::Horizontal</enum>
-                   </property>
-                   <property name="sizeHint" stdset="0">
-                    <size>
-                     <width>40</width>
-                     <height>20</height>
-                    </size>
-                   </property>
-                  </spacer>
-                 </item>
-                 <item row="0" column="0">
-                  <widget class="QLabel" name="label_24">
-                   <property name="text">
-                    <string>Графічний бажаний процесор</string>
-                   </property>
-                  </widget>
-                 </item>
-                </layout>
-               </item>
-               <item row="3" column="0">
+              <layout class="QGridLayout" name="gridLayout_4" rowstretch="0,0,0,0,0,0,0">
+               <item row="4" column="0">
                 <layout class="QVBoxLayout" name="verticalLayout_2">
                  <item>
                   <widget class="QGroupBox" name="groupBox_2">
@@ -672,7 +626,79 @@ QPushButton:pressed {
                  </item>
                 </layout>
                </item>
-               <item row="5" column="0">
+               <item row="1" column="0">
+                <widget class="QGroupBox" name="groupBox_3">
+                 <property name="title">
+                  <string>Оберіть профіль, який будете модифікувати</string>
+                 </property>
+                 <layout class="QGridLayout" name="gridLayout_7">
+                  <item row="0" column="0">
+                   <layout class="QGridLayout" name="gridLayout_6" columnstretch="5,0,0">
+                    <item row="1" column="0">
+                     <widget class="QComboBox" name="profile_box">
+                      <item>
+                       <property name="text">
+                        <string>Профіль 1</string>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>Профіль 2</string>
+                       </property>
+                      </item>
+                      <item>
+                       <property name="text">
+                        <string>Профіль 3</string>
+                       </property>
+                      </item>
+                     </widget>
+                    </item>
+                    <item row="1" column="1">
+                     <widget class="QPushButton" name="profile_button">
+                      <property name="text">
+                       <string>Обрати профіль</string>
+                      </property>
+                      <property name="iconSize">
+                       <size>
+                        <width>16</width>
+                        <height>16</height>
+                       </size>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="3" column="0">
+                     <widget class="QLabel" name="profile_label">
+                      <property name="text">
+                       <string>Обраний профіль:</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="3" column="1">
+                     <widget class="QPushButton" name="pushButton_3">
+                      <property name="text">
+                       <string>Переглянути</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="1" column="2">
+                     <spacer name="horizontalSpacer_6">
+                      <property name="orientation">
+                       <enum>Qt::Orientation::Horizontal</enum>
+                      </property>
+                      <property name="sizeHint" stdset="0">
+                       <size>
+                        <width>40</width>
+                        <height>20</height>
+                       </size>
+                      </property>
+                     </spacer>
+                    </item>
+                   </layout>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item row="6" column="0">
                 <layout class="QHBoxLayout" name="horizontalLayout_12" stretch="1,1,1,1">
                  <item>
                   <spacer name="horizontalSpacer_4">
@@ -711,55 +737,18 @@ QPushButton:pressed {
                 </layout>
                </item>
                <item row="0" column="0">
-                <layout class="QGridLayout" name="gridLayout_6" columnstretch="5,2,0">
-                 <item row="2" column="1">
-                  <widget class="QPushButton" name="profile_button">
-                   <property name="text">
-                    <string>Обрати профіль</string>
-                   </property>
-                   <property name="iconSize">
-                    <size>
-                     <width>16</width>
-                     <height>16</height>
-                    </size>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="4" column="0">
-                  <widget class="QLabel" name="profile_label">
-                   <property name="text">
-                    <string>Обраний профіль:</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="2" column="0">
-                  <widget class="QComboBox" name="profile_box">
+                <layout class="QGridLayout" name="gridLayout_5" columnstretch="2,0">
+                 <item row="1" column="0">
+                  <widget class="QComboBox" name="comboBox_11">
                    <item>
                     <property name="text">
-                     <string>Профіль 1</string>
-                    </property>
-                   </item>
-                   <item>
-                    <property name="text">
-                     <string>Профіль 2</string>
-                    </property>
-                   </item>
-                   <item>
-                    <property name="text">
-                     <string>Профіль 3</string>
+                     <string>NVIDIA GeForce MX450</string>
                     </property>
                    </item>
                   </widget>
                  </item>
-                 <item row="0" column="0">
-                  <widget class="QLabel" name="label_6">
-                   <property name="text">
-                    <string>Оберіть профіль, який будете модифікувати</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="2" column="2">
-                  <spacer name="horizontalSpacer_6">
+                 <item row="1" column="1">
+                  <spacer name="horizontalSpacer_3">
                    <property name="orientation">
                     <enum>Qt::Orientation::Horizontal</enum>
                    </property>
@@ -770,6 +759,26 @@ QPushButton:pressed {
                     </size>
                    </property>
                   </spacer>
+                 </item>
+                 <item row="0" column="1">
+                  <spacer name="horizontalSpacer_5">
+                   <property name="orientation">
+                    <enum>Qt::Orientation::Horizontal</enum>
+                   </property>
+                   <property name="sizeHint" stdset="0">
+                    <size>
+                     <width>40</width>
+                     <height>20</height>
+                    </size>
+                   </property>
+                  </spacer>
+                 </item>
+                 <item row="0" column="0">
+                  <widget class="QLabel" name="label_24">
+                   <property name="text">
+                    <string>Графічний бажаний процесор</string>
+                   </property>
+                  </widget>
                  </item>
                 </layout>
                </item>
