--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -51,9 +51,9 @@ button:active {
 }</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_8" rowstretch="1,1,1,1" columnstretch="1,1,1,1">
-    <item row="1" column="3">
-     <spacer name="horizontalSpacer_2">
+   <layout class="QGridLayout" name="gridLayout_8" rowstretch="1,1,3,1,2" columnstretch="1,2,1,1">
+    <item row="2" column="0">
+     <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Orientation::Horizontal</enum>
       </property>
@@ -65,8 +65,24 @@ button:active {
       </property>
      </spacer>
     </item>
-    <item row="1" column="1" rowspan="2" colspan="2">
+    <item row="4" column="1">
+     <spacer name="verticalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Orientation::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="2" column="1" rowspan="2" colspan="2">
      <layout class="QVBoxLayout" name="verticalLayout_10">
+      <property name="spacing">
+       <number>10</number>
+      </property>
       <item>
        <widget class="QPushButton" name="infoCard_b">
         <property name="styleSheet">
@@ -164,38 +180,6 @@ QPushButton:pressed {
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="fanCard_b">
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-    border: 3px solid transparent;
-	border-color: #373B44;
-    padding: 8px 14px;
-    font-size: 16px;
-    color: #373B44;
-    background-color: transparent;
-    background-image: conical-gradient(from 90deg, transparent 90deg, #373B44 90deg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-origin: content;
-    outline: none;
-}
-
-QPushButton:hover {
-    outline: none;
-	background-color: #bfffac;
-}
-
-QPushButton:pressed {
-    background-color: #373B44;
-    color: white;
-}</string>
-        </property>
-        <property name="text">
-         <string>Керування вентиляторами</string>
-        </property>
-       </widget>
-      </item>
-      <item>
        <widget class="QPushButton" name="pushButton_5">
         <property name="styleSheet">
          <string notr="true">QPushButton {
@@ -229,20 +213,7 @@ QPushButton:pressed {
       </item>
      </layout>
     </item>
-    <item row="1" column="0">
-     <spacer name="horizontalSpacer">
-      <property name="orientation">
-       <enum>Qt::Orientation::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="0" column="1">
+    <item row="1" column="1">
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Orientation::Vertical</enum>
@@ -255,18 +226,112 @@ QPushButton:pressed {
       </property>
      </spacer>
     </item>
-    <item row="3" column="1">
-     <spacer name="verticalSpacer_2">
+    <item row="2" column="3">
+     <spacer name="horizontalSpacer_2">
       <property name="orientation">
-       <enum>Qt::Orientation::Vertical</enum>
+       <enum>Qt::Orientation::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>20</width>
-        <height>40</height>
+        <width>40</width>
+        <height>20</height>
        </size>
       </property>
      </spacer>
+    </item>
+    <item row="0" column="0" colspan="4">
+     <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0,0,0,0" columnstretch="1,0,0">
+      <item row="0" column="2">
+       <widget class="QPushButton" name="pushButton">
+        <property name="styleSheet">
+         <string notr="true">QPushButton {
+    border: 3px solid transparent;
+	border-color: #373B44;
+    padding: 8px 14px;
+    font-size: 12px;
+    color: #373B44;
+    background-color: transparent;
+    background-image: conical-gradient(from 90deg, transparent 90deg, #373B44 90deg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-origin: content;
+    outline: none;
+}
+
+QPushButton:hover {
+    outline: none;
+	background-color: #bfffac;
+}
+
+QPushButton:pressed {
+    background-color: #373B44;
+    color: white;
+}</string>
+        </property>
+        <property name="text">
+         <string>Допомога у використанні</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <spacer name="horizontalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Orientation::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="4" column="0">
+       <spacer name="verticalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Orientation::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="3" column="2">
+       <widget class="QPushButton" name="pushButton_2">
+        <property name="styleSheet">
+         <string notr="true">QPushButton {
+    border: 3px solid transparent;
+	border-color: #373B44;
+    padding: 8px 14px;
+    font-size: 12px;
+    color: #373B44;
+    background-color: transparent;
+    background-image: conical-gradient(from 90deg, transparent 90deg, #373B44 90deg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-origin: content;
+    outline: none;
+}
+
+QPushButton:hover {
+    outline: none;
+	background-color: #bfffac;
+}
+
+QPushButton:pressed {
+    background-color: #373B44;
+    color: white;
+}</string>
+        </property>
+        <property name="text">
+         <string>Детальніше про автора</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
